<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cfm.bm</groupId>
	<artifactId>cfm-rest-api</artifactId>
	<packaging>war</packaging>
	<version>1.0</version>
	<description>Casino Financial Module Project</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<org.apache.cxf.version>2.7.11</org.apache.cxf.version>
		<spring.version>3.2.3.RELEASE</spring.version>
		<metrics.version>3.0.1</metrics.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-bundle</artifactId>
			<version>${org.apache.cxf.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-asm</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>xml-apis</artifactId>
					<groupId>xml-apis</groupId>
				</exclusion>
				<exclusion>
					<artifactId>xercesImpl</artifactId>
					<groupId>xerces</groupId>
				</exclusion>
				<exclusion>
					<artifactId>xmlbeans</artifactId>
					<groupId>org.apache.xmlbeans</groupId>
				</exclusion>
				<exclusion>
					<artifactId>xmlParserAPIs</artifactId>
					<groupId>xerces</groupId>
				</exclusion>				
				<exclusion>
					<artifactId>velocity</artifactId>
					<groupId>org.apache.velocity</groupId>
				</exclusion>
				<exclusion>
					<artifactId>httpcore</artifactId>
					<groupId>org.apache.httpcomponents</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-lang3</artifactId>
					<groupId>org.apache.commons</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-lang</artifactId>
					<groupId>commons-lang</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.9</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.11</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-jaxrs</artifactId>
			<version>1.9.11</version>
		</dependency>

		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0-m10</version>
		</dependency>
		<dependency>
			<groupId>org.apache.neethi</groupId>
			<artifactId>neethi</artifactId>
			<version>3.0.2</version>
		</dependency>		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.3</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.7.2</version>
		</dependency>	
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.6.8</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
 		<dependency>
	        <groupId>org.springframework</groupId>
	        <artifactId>spring-jdbc</artifactId>
	        <version>${spring.version}</version>
    	</dependency>
		<!-- Metrics dependencies -->
		<dependency>
			<groupId>com.codahale.metrics</groupId>
			<artifactId>metrics-core</artifactId>
			<version>${metrics.version}</version>
		</dependency>
		<dependency>
			<groupId>com.codahale.metrics</groupId>
			<artifactId>metrics-servlets</artifactId>
			<version>${metrics.version}</version>
		</dependency>

		<!-- Swagger dependency to generate docs -->
		<dependency>
			<groupId>com.wordnik</groupId>
			<artifactId>swagger-jaxrs_2.10</artifactId>
			<version>1.3.4</version>

			<exclusions>
				<exclusion>
					<artifactId>xml-apis</artifactId>
					<groupId>xml-apis</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.codehaus.enunciate</groupId>
			<artifactId>enunciate-rt</artifactId>
			<version>1.28</version>
			<exclusions>
				<exclusion>
					<groupId>stax</groupId>
					<artifactId>stax-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- JUnit dependency -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-remote-shell</artifactId>
			<version>1.0.0.RELEASE</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
				<exclusion>
					<artifactId>logback-classic</artifactId>
					<groupId>ch.qos.logback</groupId>
				</exclusion>
				<exclusion>
					<artifactId>log4j-over-slf4j</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jcl-over-slf4j</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<!-- Plug in repository to generate swagger docs from maven target -->
	<pluginRepositories>
		<pluginRepository>
			<id>sonatype-snapshot</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>maven2-eviware-repository</id>
			<name>Eviware Maven 2 Repository (for SoapUI)</name>
			<url>http://www.eviware.com/repository/maven2/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<parallel>methods</parallel>
					<threadCount>1</threadCount>
					<properties><!-- disabling testng reports that slow down the build -->
						<property>
							<name>usedefaultlisteners</name>
							<value>false</value>
						</property>
						<property>
							<name>reporter</name>
							<value>org.testng.reporters.FailedReporter,org.testng.reporters.XMLReporter</value>
						</property>
					</properties>
				</configuration>
			</plugin>

			<!-- Generate Javadocs -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
				</configuration>
			</plugin>

			<!-- Generate REST API documentation -->
			<plugin>
				<groupId>com.github.kongchen</groupId>
				<artifactId>swagger-maven-plugin</artifactId>
				<version>2.0</version>
				<configuration>
					<apiSources>
						<apiSource>
							<locations>com.cfm.ws.service</locations>
							<apiVersion>v1</apiVersion>
							<basePath>http://localhost:8084/rest-api/services</basePath>
							<!-- Templates: html.mustache, markdown.mustache, strapdown.html.mustache, wiki-new.mustache, wiki.mustache -->
							<outputTemplate>${basedir}/templates/strapdown.html.mustache</outputTemplate>
							<outputPath>generated/strapdown.html</outputPath>
							<swaggerDirectory>generated/apidocs</swaggerDirectory>
						</apiSource>
					</apiSources>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Generate SOAP UI Test Documentation -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>xml-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>transform</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<transformationSets>
						<transformationSet>
							<dir>${project.basedir}/soapUI_Test_Cases</dir>
							<includes>
								<include>cfm-soapui-project.xml</include>
							</includes>
							<stylesheet>${project.basedir}/soapUI_Test_Cases/test-report-generator.xsl</stylesheet>
						</transformationSet>
					</transformationSets>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.github.kongchen
										</groupId>
										<artifactId>
											swagger-maven-plugin
										</artifactId>
										<versionRange>[2.0,)</versionRange>
										<goals>
											<goal>generate</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											xml-maven-plugin
										</artifactId>
										<versionRange>
											[1.0,)
										</versionRange>
										<goals>
											<goal>transform</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<property>
					<name>env</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-antrun-plugin</artifactId>
						<executions>
							<execution>
								<phase>test</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<tasks>
										<copy todir="${user.home}/conf/${env}">
											<fileset dir="conf/${env}" />
										</copy>
									</tasks>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-jar-plugin</artifactId>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<classifier>test</classifier>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Profile to run SOAP UI tests -->
		<profile>
			<id>soapui</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.2</version>
						<configuration>
							<webResources>
								<resource>
									<directory>conf/dev</directory>
									<targetPath>WEB-INF/classes</targetPath>
								</resource>
							</webResources>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.apache.tomcat.maven</groupId>
						<artifactId>tomcat7-maven-plugin</artifactId>
						<version>2.1</version>
						<configuration>
							<port>8080</port>
							<additionalClasspathDirs>
								<additionalClasspathDir>${project.basedir}/conf/dev</additionalClasspathDir>
							</additionalClasspathDirs>
							<path>/cfm-rest-api-1.0</path>
						</configuration>
						<executions>
							<execution>
								<id>tomcat-run</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>run-war-only</goal>
								</goals>
								<configuration>
									<fork>true</fork>
								</configuration>
							</execution>
							<execution>
								<id>tomcat-shutdown</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>shutdown</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>eviware</groupId>
						<artifactId>maven-soapui-plugin</artifactId>
						<version>4.0.1</version>
						<configuration>
							<projectFile>${project.basedir}/soapUI_Test_Cases/cfm-soapui-project.xml</projectFile>
							<junitReport>true</junitReport>
							<testFailIgnore>true</testFailIgnore>
							<printReport>true</printReport>
							<exportAll>true</exportAll>
							<outputFolder>target/test-reports</outputFolder>
							<projectProperties>
								<value>localserver=127.0.0.1:8080</value>
							</projectProperties>
							<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>org.codehaus.groovy</groupId>
								<artifactId>groovy-all</artifactId>
								<version>2.1.6</version>
								<scope>runtime</scope>
							</dependency>
							<dependency>
								<groupId>mysql</groupId>
								<artifactId>mysql-connector-java</artifactId>
								<version>5.1.9</version>
							</dependency>
							<dependency>
								<groupId>ojdbc</groupId>
								<artifactId>ojdbc</artifactId>
								<version>14</version>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<id>soapui-tests</id>
								<phase>integration-test</phase>
								<goals>
									<goal>test</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Profile to run jmeter tests -->
		<profile>
			<id>jmeter</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.2</version>
						<configuration>
							<webResources>
								<resource>
									<directory>conf/dev</directory>
									<targetPath>WEB-INF/classes</targetPath>
								</resource>
							</webResources>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.apache.tomcat.maven</groupId>
						<artifactId>tomcat7-maven-plugin</artifactId>
						<version>2.1</version>
						<configuration>
							<port>8080</port>
							<additionalClasspathDirs>
								<additionalClasspathDir>${project.basedir}/conf/dev</additionalClasspathDir>
							</additionalClasspathDirs>
							<path>/cfm-rest-api-1.0</path>
						</configuration>
						<executions>
							<execution>
								<id>tomcat-run</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>run-war-only</goal>
								</goals>
								<configuration>
									<fork>true</fork>
								</configuration>
							</execution>
							<execution>
								<id>tomcat-shutdown</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>shutdown</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.lazerycode.jmeter</groupId>
						<artifactId>jmeter-maven-plugin</artifactId>
						<version>1.9.0</version>
						<executions>
							<execution>
								<id>jmeter-tests</id>
								<phase>integration-test</phase>
								<goals>
									<goal>jmeter</goal>
								</goals>
								<configuration>
									<customPropertiesFile>${project.basedir}/jmeter/setup/jmeterCFM.properties</customPropertiesFile>
									<testFilesDirectory>${project.basedir}/jmeter/tests</testFilesDirectory>
									<testFilesIncluded>
										<jMeterTestFile>CFMDBUsage.jmx</jMeterTestFile>
									</testFilesIncluded>
									<testResultsTimestamp>false</testResultsTimestamp>
									<propertiesUser>
										<restapi.server>localhost</restapi.server>
										<restapi.port>8080</restapi.port>
										<restapi.data>devTesting</restapi.data>
									</propertiesUser>
								</configuration>
							</execution>
						</executions>
						<dependencies>
							<dependency>
								<groupId>com.fasterxml.jackson.core</groupId>
								<artifactId>jackson-databind</artifactId>
								<version>2.2.1</version>
							</dependency>
							<dependency>
								<groupId>com.fasterxml.jackson.core</groupId>
								<artifactId>jackson-core</artifactId>
								<version>2.2.1</version>
							</dependency>
							<dependency>
								<groupId>com.fasterxml.jackson.core</groupId>
								<artifactId>jackson-annotations</artifactId>
								<version>2.2.1</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>